Improved data: Creates a larger tree sample Data scoped to application Minor: loggers and cli
